--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy Valentines Day</title>
     <script src="/javascript/head.js" defer></script>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Happy+Monkey&family=Orbitron:wght@400..900&family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
@@ -21,7 +21,7 @@
             Nothing is impossible for us when we are together! You make my life complete and full of joy. I'm glad i've found a partner in life and love! Love you to the moon and back
         </p>
         
-        <a href="/html/second.html">
+        <a href="html/second.html">
             <button class="main-btn">Click here</button>
         </a>
     </main>
