--- a/html/header.html
+++ b/html/header.html
@@ -1,19 +1,19 @@
 
     <header>
         <div class="logo-container">
-            <img src="/images/—Pngtree—valentine bear sticker_14473935.png" alt="" id="logo">
+            <img src="images/—Pngtree—valentine bear sticker_14473935.png" alt="" id="logo">
             <h1 class="header-text">
-            <a href="/html/index.html">For my love</a>
+            <a href="html/index.html">For my love</a>
             </h1>
         </div>
         
         <nav class="nav-bar">
             <ul class="ul-el">
                 <li>
-                    <a href="/html/index.html">home</a>
+                    <a href="html/index.html">home</a>
                 </li>
                 <li>
-                    <a href="/html/slideshow.html">slideshow</a>
+                    <a href="html/slideshow.html">slideshow</a>
                 </li>
             </ul>
             <div class="hamburger">
